--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name>ano-utils</name>
+  <name>ConfigureMe</name>
 
   <dependencies>
 	<dependency>
