--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -30,9 +30,9 @@
   </build>
 
 	<scm>
-		<url>svn:https://configureme.dev.java.net/svn/configureme/trunk</url>
-		<connection>scm:svn:https://configureme.dev.java.net/svn/configureme/trunk</connection>
-		<developerConnection>scm:svn:https://configureme.dev.java.net/svn/configureme/trunk</developerConnection>
+		<url>svn:https://configureme.dev.java.net/svn/configureme/tags/configureme-1.0.0</url>
+		<connection>scm:svn:https://configureme.dev.java.net/svn/configureme/tags/configureme-1.0.0</connection>
+		<developerConnection>scm:svn:https://configureme.dev.java.net/svn/configureme/tags/configureme-1.0.0</developerConnection>
 	</scm>
 
 </project>
