--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,12 @@
 	<classpathentry kind="src" path="src/examples"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/ano-util.jar"/>
-	<classpathentry kind="lib" path="lib/json.jar"/>
-	<classpathentry kind="lib" path="lib/log4j.jar"/>
+	<classpathentry kind="lib" path="lib/ano-util-latest.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-stable.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-latest.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-stable.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-stable.jar"/>
+	<classpathentry kind="lib" path="lib/json-stable.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-stable.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
