--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="test/junit"/>
-	<classpathentry kind="src" path="src/examples"/>
+	<classpathentry kind="src" output="target/classes" path="src/java"/>
+	<classpathentry kind="src" output="target/test-classes" path="test/junit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/ano-util-latest.jar"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils-stable.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-latest.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-stable.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-stable.jar"/>
-	<classpathentry kind="lib" path="lib/json-stable.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-stable.jar"/>
-	<classpathentry kind="output" path="classes"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
