--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -30,9 +30,9 @@
   </build>
 
 	<scm>
-		<url>svn:https://svn.java.net/svn/configureme~svn/tags/configureme-1.1.0</url>
-		<connection>scm:svn:https://svn.java.net/svn/configureme~svn/tags/configureme-1.1.0</connection>
-		<developerConnection>scm:svn:https://svn.java.net/svn/configureme~svn/tags/configureme-1.1.0</developerConnection>
+		<url>svn:https://svn.java.net/svn/configureme~svn/trunk</url>
+		<connection>scm:svn:https://svn.java.net/svn/configureme~svn/trunk</connection>
+		<developerConnection>scm:svn:https://svn.java.net/svn/configureme~svn/trunk</developerConnection>
 	</scm>
     <repositories>
           <repository>
