--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.1</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -30,9 +30,9 @@
   </build>
 
 	<scm>
-		<url>svn:svn://svn.anotheria.net/opensource/configureme/trunk/</url>
-		<connection>scm:svn:svn://svn.anotheria.net/opensource/configureme/trunk/</connection>
-		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/configureme/trunk/</developerConnection>
+		<url>svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-1.1.1</url>
+		<connection>scm:svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-1.1.1</connection>
+		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-1.1.1</developerConnection>
 	</scm>
     <repositories>
           <repository>
