--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>1.1.5-SNAPSHOT</version>
+  <version>1.1.4-SNAPSHOT</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -51,8 +51,8 @@
 
       <repository>
         <id>sonatype</id>
-        <name>Sonatype OS Staging</name>
-        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        <name>Sonatype OS Releases</name>
+        <url>https://oss.sonatype.org/content/repositories/releases/</url>
       </repository>
 
       <snapshotRepository>
