--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -30,9 +30,9 @@
   </build>
 
 	<scm>
-		<url>svn:http://svn.anotheria.net/opensource/configureme/trunk</url>
-		<connection>scm:http:svn://svn.anotheria.net/opensource/configureme/trunk</connection>
-		<developerConnection>scm:svn:http://svn.anotheria.net/opensource/configureme/trunk</developerConnection>
+		<url>svn:http://svn.anotheria.net/opensource/configureme/tags/configureme-2.0.0</url>
+		<connection>scm:http:svn://svn.anotheria.net/opensource/configureme/tags/configureme-2.0.0</connection>
+		<developerConnection>scm:svn:http://svn.anotheria.net/opensource/configureme/tags/configureme-2.0.0</developerConnection>
 	</scm>
     <repositories>
           <repository>
