--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,21 @@
 		<groupId>net.anotheria</groupId>
 		<artifactId>ano-util</artifactId>
 		<version>2.0.0</version>
+        <exclusions>
+            <exclusion>
+                <groupId>blowfish</groupId>
+                <artifactId>blowfish</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer</artifactId>
+            </exclusion>
+        </exclusions>
 	</dependency>
 	<dependency>
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
-		<version>1.0</version>
+		<version>20090211</version>
 	</dependency>
   </dependencies>
 
