--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 		<artifactId>json</artifactId>
 		<version>20090211</version>
 	</dependency>
+      <!-- logging -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.5</version>
+      </dependency>
   </dependencies>
 
   <build>
