--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>configureme</artifactId>
-  <version>2.2.0</version>
+  <version>2.2.1-SNAPSHOT</version>
   <name>ConfigureMe</name>
 
   <dependencies>
@@ -50,8 +50,8 @@
   </build>
 
 	<scm>
-		<url>svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-2.2.0</url>
-		<connection>scm:svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-2.2.0</connection>
-		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/configureme/tags/configureme-2.2.0</developerConnection>
+		<url>svn:svn://svn.anotheria.net/opensource/configureme/trunk</url>
+		<connection>scm:svn:svn://svn.anotheria.net/opensource/configureme/trunk</connection>
+		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/configureme/trunk</developerConnection>
 	</scm>
 </project>
