--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
 	<build>
 		<sourceDirectory>${project.basedir}/src/java</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/test/junit</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
 	</build>
 
 	<scm>
