--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,33 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
-        
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.22.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.22.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+
+
 		<!-- testing scope dependencies -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+		    <version>1.57</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
