--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.anotheria</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.7</version>
+        <version>2.8-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -51,19 +51,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
 
-        </plugins>
-	</build>
 	<scm>
 		<connection>scm:git:git@github.com:anotheria/configureme.git</connection>
 		<developerConnection>scm:git:git@github.com:anotheria/configureme.git</developerConnection>
