--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 	<version>2.3.5-SNAPSHOT</version>
 	<name>ConfigureMe</name>
 
+	<properties>
+		<jersey-version>2.27</jersey-version>
+	</properties>
 	<dependencies>
 		<!-- general dependencies -->
 		<dependency>
@@ -19,18 +22,24 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20090211</version>
+			<version>20180130</version>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
+			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>1.18.1</version>
+			<version>${jersey-version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-json</artifactId>
-			<version>1.18.1</version>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey-version}</version>
+		</dependency>
+
 
 		<!-- testing scope dependencies -->
 		<dependency>
@@ -41,7 +50,7 @@
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock</artifactId>
-			<version>1.57</version>
+			<version>2.18.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
