--- a/pom.xml
+++ b/pom.xml
@@ -28,21 +28,23 @@
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
 			<version>${jersey-version}</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
 			<artifactId>jersey-hk2</artifactId>
 			<version>${jersey-version}</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>${jersey-version}</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
-
 
 		<!-- testing scope dependencies -->
 		<dependency>
