--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>configureme</artifactId>
-	<version>2.5.1</version>
+	<version>2.5.2-SNAPSHOT</version>
 	<name>ConfigureMe</name>
 
 	<properties>
