--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>configureme</artifactId>
 	<version>2.5.2-SNAPSHOT</version>
-	<name>ConfigureMe</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>ConfigureMe</name>
 
 	<properties>
 		<jersey-version>2.38</jersey-version>
@@ -23,6 +35,11 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20230618</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
