Refactored the code, fixed errors in json examples.

--- a/src/examples/externalConfig.json
+++ b/src/examples/externalConfig.json
@@ -1,10 +1,10 @@
 {
-    externalAttribute: "external",
-    live:{
-        externalAttribute: "external live",
+    "externalAttribute": "external",
+    "live":{
+        "externalAttribute": "external live"
     },
-    test: {
-        externalAttribute: "external test",
-    },
+    "test": {
+        "externalAttribute": "external test"
+    }
 
 }
