--- a/src/examples/configurealso.json
+++ b/src/examples/configurealso.json
@@ -1,9 +1,9 @@
 {
-    simple: "global simple",
-    live:{
-        simple: "live simple"
+    "simple": "global simple",
+    "live":{
+        "simple": "live simple"
     },
-    test:{
-        simple: "test simple"
-    },
+    "test":{
+        "simple": "test simple"
+    }
 }
