--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>configureme</artifactId>
 	<name>ConfigureMe</name>
-	<version>2.6.0</version>
+	<version>2.6.1-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
