--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>net.anotheria</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.13</version>
+		<version>2.15</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -15,15 +15,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
 	<properties>
-		<jersey-version>2.38</jersey-version>
+		<jersey-version>3.1.3</jersey-version>
 	</properties>
 	<dependencies>
 		<!-- general dependencies -->
@@ -57,6 +57,11 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 
 		<!-- testing scope dependencies -->
 		<dependency>
@@ -67,7 +72,7 @@
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock</artifactId>
-			<version>2.18.0</version>
+			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
