--- a/.github/workflows/ci_on_commit.yml
+++ b/.github/workflows/ci_on_commit.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up JDK 1.8
+    - name: Set up JDK 21
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+	  	java-version: '21'
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
@@ -80,7 +80,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+	  	java-version: '21'
         
     - uses: actions/cache@v1
       with:
