--- a/.github/workflows/ci_on_commit.yml
+++ b/.github/workflows/ci_on_commit.yml
@@ -10,13 +10,15 @@ jobs:
   checkstyle:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Set up JDK 21
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
-	  	java-version: '21'
-    - uses: actions/cache@v1
+	  	distribution: 'temurin'
+		java-version: '21'
+		cache: 'maven'    
+	- uses: actions/cache@v4
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
